make breadcrumbs correct wrapped in small screen (#107)

--- a/src/stmaterial/assets/styles/components/_breadcrumb.scss
+++ b/src/stmaterial/assets/styles/components/_breadcrumb.scss
@@ -1,6 +1,7 @@
 .stm-article-breadcrumbs {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
   a {
     display: flex;
